infrastructure/argocd/argo-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.i.recompiled.org`)
    priority: 10
    services:
    - name: argocd-server
      port: 80
      sticky:
        cookie:
          name: argocd-affinity
          secure: true
          httpOnly: true
          sameSite: lax
  - kind: Rule
    match: Host(`argocd.i.recompiled.org`) && Header(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
      sticky:
        cookie:
          name: argocd-grpc-affinity
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: argocd-tls
